[gd_scene load_steps=8 format=3 uid="uid://cx3rgkjpyqhnn"]

[ext_resource type="Script" uid="uid://dwvvplhqlnw8y" path="res://scripts/songSelect.gd" id="1_bb2vf"]
[ext_resource type="FontFile" uid="uid://bg853ddmcspu6" path="res://fonts/Corporate-Logo-Rounded-Bold-ver3.woff" id="2_qapgu"]
[ext_resource type="Texture2D" uid="uid://brdefk1d17113" path="res://assets/images/left.png" id="3_mt0kp"]
[ext_resource type="Texture2D" uid="uid://b180jh38spjx1" path="res://assets/images/right.png" id="4_i6gyg"]

[sub_resource type="Animation" id="Animation_i6gyg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:stretch_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_mt0kp"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.03333, 3.66667, 4.96667, 7.43333),
"transitions": PackedFloat32Array(0.840896, 1.27456, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.03333, 10.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:stretch_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.63333, 5.7),
"transitions": PackedFloat32Array(2.14355, 1),
"update": 1,
"values": [0, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at55l"]
_data = {
&"RESET": SubResource("Animation_i6gyg"),
&"float": SubResource("Animation_mt0kp")
}

[node name="SongSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bb2vf")

[node name="LeftArrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 973.0
offset_right = 115.0
offset_bottom = 1053.0
texture = ExtResource("3_mt0kp")

[node name="RightArrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1809.0
offset_top = 973.0
offset_right = 1889.0
offset_bottom = 1053.0
texture = ExtResource("4_i6gyg")

[node name="Preview" type="AudioStreamPlayer2D" parent="."]

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Leftarea" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/Leftarea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jacket" type="TextureRect" parent="HSplitContainer/Leftarea/CenterContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 3

[node name="float" type="AnimationPlayer" parent="HSplitContainer/Leftarea/CenterContainer/Jacket"]
libraries = {
&"": SubResource("AnimationLibrary_at55l")
}

[node name="Rightarea" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleLbl" type="Label" parent="HSplitContainer/Rightarea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.970003, 0.971042, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_qapgu")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1

[node name="LevelLbl" type="Label" parent="HSplitContainer/Rightarea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827469, 0.160469, 0.637285, 1)
theme_override_colors/font_shadow_color = Color(0.804621, 0.357304, 0.614602, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_qapgu")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="Background" type="TextureRect" parent="."]
z_index = -10
layout_mode = 1
